--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Logging.config
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Logging.config
@@ -3,7 +3,7 @@
 
 	<!-- Logs everything to a file -->
 	<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="importer" />
+			<file value="logs/importer" />
 			<staticLogFileName value="false" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
@@ -23,7 +23,7 @@
 	</appender>
 	
 	<appender name="RollingErrorFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="errors" />
+			<file value="logs/errors" />
 			<staticLogFileName value="false" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
