#23698 / #21 - fixed -- note! this will generate a lot of logs!

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporter/Logging.config
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporter/Logging.config
@@ -89,7 +89,7 @@
 		-->
 		
 		<!-- ALL: Uncomment this to log all messages to a file -->
-		<!-- <appender-ref ref="RollingFileAppender" /> -->		
+		<appender-ref ref="RollingFileAppender" />
 		
 		<!-- ERRORS: Logs only all errors and their stacktraces to a file -->
 		<appender-ref ref="RollingErrorFileAppender" />		
