--- a/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Test/Azavea.NijPredictivePolicing.Test.csproj
@@ -100,6 +100,7 @@
     <Compile Include="AcsDataManagerTests.cs" />
     <Compile Include="ACSAlchemistLibrary\AreaDownloaderTests.cs" />
     <Compile Include="ACSAlchemistLibrary\ShapefileHelperTests.cs" />
+    <Compile Include="BaseTest.cs" />
     <Compile Include="Common\CmdLineJobBaseTests.cs" />
     <Compile Include="Common\ConfigTests.cs" />
     <Compile Include="Common\Data\CommaSeparatedValueTests.cs" />
