Update config files, remove autogened configs

--- a/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.Common/Azavea.NijPredictivePolicing.Common.csproj
@@ -130,6 +130,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="configs\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="gpl.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
