Allow unsafe blocks -- to fix compilation warning

--- a/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Azavea.NijPredictivePolicing.AcsAlchemistGui.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporterGui/Azavea.NijPredictivePolicing.AcsAlchemistGui.csproj
@@ -71,6 +71,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Icon1.ico</ApplicationIcon>
