--- a/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsAlchemist.csproj
+++ b/csharp/Azavea.NijPredictivePolicing.AcsImporter/Azavea.NijPredictivePolicing.AcsAlchemist.csproj
@@ -106,6 +106,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Logging.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
